# LoRa-Llama-With-DDP

./: .gitignore  GPU_acceleration_guide.md  GPU_inference_guide.md  README.md  main.py  pyproject.toml  requirements.txt
configs/: base.yaml  cot.yaml  few_shot.yaml  zero_shot.yaml
dataset/: benchmark.csv  dataset.csv
scripts/: run_experience_slurm.sh  run_inference_slurm.sh
src/: data.py  evaluate.py  infer_validation.py  model.py  train.py
