[project]
name = "hw1-question-answering"
version = "0.1.0"
description = "Fine-tuning a question-answering model on the PathoQA dataset."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.10",
    "datasets>=2.18",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "accelerate>=0.28",
    "bitsandbytes>=0.43",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]
